third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/dereference_combo.no-opt.exp

Diagnostics:
error: mutable reference in local `s` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo.move:13:9
   │
12 │         if (cond) f = &s.f else f = &other.f;
   │                       ---- previous field borrow
13 │         *s;
   │         ^^ requirement enforced here
14 │         *f;
   │         -- conflicting reference `f` used here

error: mutable reference in local `s` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo.move:21:9
   │
20 │         if (cond) f = &s.f else f = &s.g;
   │                       ----          ---- previous field borrow
   │                       │
   │                       previous field borrow
21 │         *s;
   │         ^^ requirement enforced here
22 │         *f;
   │         -- conflicting reference `f` used here

error: cannot implicitly freeze value since other mutable usages for this reference exist
   ┌─ tests/reference-safety/v1-tests/dereference_combo.move:28:23
   │
28 │         if (cond) x = copy s else x = other; // error in v2 because of copy of mut ref
   │                       ^^^^^^ implicitly frozen here
29 │         *s;
   │         -- used here

error: mutable reference in local `s` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo.move:29:9
   │
28 │         if (cond) x = copy s else x = other; // error in v2 because of copy of mut ref
   │                       ------ previous freeze
29 │         *s;
   │         ^^ requirement enforced here
30 │         *x;
   │         -- conflicting reference `x` used here
